# fastapi_microshop

./: .gitignore  README.md  crud.py  pyproject.toml  queries.sql
alembic/: env.py
alembic/versions/: 2024_08_29_1127-028016edfc0a_create_products_table.py  2024_08_29_1159-169d740a27aa_create_users_table.py  2024_08_29_1455-b98b34e76e06_create_posts_table.py  2024_08_30_1459-7153da2b6c59_create_profile_table.py  2024_09_06_1140-10110f789068_create_orders_table.py  2024_09_06_1313-4e9bb6ef66e6_order_product_association_table.py  2024_09_11_1110-e4b5a60e1f9b_add_count_column_to_order_product_.py  2024_09_12_1241-365ded6101e1_add_unit_price_to_order_product_.py
microshop/: items_views.py  main.py
microshop/api_v1/: __init__.py
microshop/api_v1/demo_auth/: create_access_token.py  crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
microshop/api_v1/products/: crud.py  dependencies.py  views.py
microshop/auth/: utils.py
microshop/core/: config.py
microshop/core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
microshop/users/: schemas.py
